<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15sp"
    app:cardCornerRadius="15sp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient_background"
        android:padding="15sp">

        <TextView
            android:id="@+id/blog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/blog_title"
            android:paddingBottom="30sp"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/username"
            android:paddingBottom="10sp"
            android:textSize="20sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/like_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20sp"
                    android:layout_height="20sp"
                    android:src="@drawable/heart" />

                <TextView
                    android:id="@+id/like_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="5sp"
                    android:text="@string/initial_value"
                    android:textSize="20sp" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingLeft="15sp"
                android:text="@string/created_at"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/published_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="cursive"
                android:text="@string/date"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>